--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "google-maps-react": "^2.0.6",
