--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@testing-library/jest-dom": "^5.11.6",
@@ -12,6 +15,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
+    "framer-motion": "^2.9.4",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
